tests/ui_board/snapshots/snapshots/ui_board__snapshots__herdr_snapshots__existing_invocation_command_opens_terminal_independent_live_reference_picker@macos.snap
---
source: tests/ui_board/snapshots/herdr.rs
expression: "snapshot(&mut fixture, 72, 12, ThemePreference::Dark)"
---
SIZE 72x12

TEXT
00││
01│⋮ Coor ┌ discovered invocations ──────────────────────────────[x]│
02│       │›                                                       ││
03│       │Live in Herdr                                           ││
04│       │reviewer         Product / Review · p9 · codex · working││
05│       └────────────────────────────────────────────────────────┘│
06││
07││
08││
09│  proqi-ui-contract│
10│  1 thought · edit · saving│
11│  Esc Board  Cmd+C Copy Cmd+X Cut│

STYLE RUNS
0: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-5 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-61 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 62-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-8 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 9-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-63 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=BOLD | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-7 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 8-15 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 16-24 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 25-63 fg=Rgb(176, 169, 160) bg=Rgb(39, 40, 48) mod=NONE | 64-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-5 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 6-6 fg=Reset bg=Reset mod=NONE | 7-64 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 65-65 fg=Reset bg=Reset mod=NONE | 66-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-69 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 70-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-17 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 18-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 24-28 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 29-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
